MVC AddBuyer Method

--- a/Program/Program.MVC/Views/Buyer/GetAllBuyersAsync.cshtml
+++ b/Program/Program.MVC/Views/Buyer/GetAllBuyersAsync.cshtml
@@ -7,7 +7,7 @@
 <h2>GetAllBuyersAsync</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New", "AddBuyerAsync")
 </p>
 <table class="table">
     <tr>
@@ -35,9 +35,9 @@
             @Html.DisplayFor(modelItem => item.TicketId)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.ActionLink("Edit", "UpdateBuyerAsync", new { id=item.Id }) |
+            @Html.ActionLink("Details", "GetBuyerAsync", new { id=item.Id }) |
+            @Html.ActionLink("Delete", "DeleteBuyerAsync", new { id=item.Id })
         </td>
     </tr>
 }
